--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <form action="">
         <label for="">Name</label>
         <input type="text">
+
+        <label for="">Reg no</label>
+        <input type="number" name="" id="">
+
+        <input type="submit" value="ok">
     </form>
 </body>
 </html>
